--- a/src/Card.css
+++ b/src/Card.css
@@ -1,15 +1,24 @@
-.card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-  
-  /* On mouse-over, add a deeper shadow */
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  /* Add some padding inside the card container */
-  .container {
-    padding: 2px 16px;
-  }
+.card-container {
+	background-color: aliceblue;
+	border-radius: 5%;
+	margin: 2%;
+	text-align: center;
+	flex-shrink: 0;
+	flex-grow: 1;
+	width: 20%;
+	min-height: 70vh;
+	max-height: 70vh;
+	display: flex;
+	flex-direction: column;
+}
+
+.card-container > img {
+	width: 100%;
+	height: 100%;
+	border-radius: 5% 5% 0 0;
+}
+
+.title-container {
+	word-wrap: none;
+	justify-content: center;
+}
