--- a/src/Card.css
+++ b/src/Card.css
@@ -12,6 +12,13 @@
 	flex-direction: column;
 }
 
+@media only screen and (max-width: 768px) {
+	.card-container {
+		margin: 10%;
+		width: 50%;
+	}
+}
+
 .card-container > img {
 	width: 100%;
 	height: 100%;
